-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.4.0-beta1
-
None
I created a new class (header and source) inside Qt Creator. Added some contents to both. Then I had a problem with its highlighting so I closed the cpp file and moved "back" (Alt-Left). Qt Creator crashed.
The crash is in toCursorInfoRange. When I try to expand textDocument it fails, so I can only guess it is deleted.
This is the trace:
#10 0x00007f0bbd654114 in QTextDocument::findBlockByNumber(int) const () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5 No symbol table info available. #11 0x00007f0b9ac4a1ed in toCursorInfoRange (textDocument=..., sourceRange=...) at /home/shaneh/dev/qt-creator/src/plugins/clangcodemodel/clangbackendipcintegration.cpp:216 start = {m_filePath = {byteArray = {d = 0x5628034bbce0}}, m_line = 35, m_column = 17} end = {m_filePath = {byteArray = {d = 0x5627ff993d10}}, m_line = 35, m_column = 28} length = 11 block = {p = 0x7fff6f0bd590, n = 29872528} shift = -1698357174 column = 32767 #12 0x00007f0b9ac4a380 in toCursorInfo (textDocument=..., message=...) at /home/shaneh/dev/qt-creator/src/plugins/clangcodemodel/clangbackendipcintegration.cpp:233 reference = @0x562801c7d1a8: {m_start = {m_filePath = {byteArray = {d = 0x5628034bbce0}}, m_line = 35, m_column = 17}, m_end = {m_filePath = {byteArray = {d = 0x5627ff993d10}}, m_line = 35, m_column = 28}} __for_range = @0x7fff6f0bd608: {d = 0x562801c7d190} __for_begin = 0x562801c7d1a8 __for_end = 0x562801c7d248 result = {useRanges = {d = 0x7f0bbd15fee0 <QArrayData::shared_null>}, areUseRangesForLocalVariable = true, unusedVariablesRanges = {d = 0x7f0bbd15fee0 <QArrayData::shared_null>}, localUses = {{d = 0x7f0bbd160f80 <QHashData::shared_null>, e = 0x7f0bbd160f80 <QHashData::shared_null>}}} references = {d = 0x562801c7d190} #13 0x00007f0b9ac4a5b7 in ClangCodeModel::Internal::IpcReceiver::references (this=0x5627fd02c880, message=...) at /home/shaneh/dev/qt-creator/src/plugins/clangcodemodel/clangbackendipcintegration.cpp:254 __PRETTY_FUNCTION__ = "virtual void ClangCodeModel::Internal::IpcReceiver::references(const ClangBackEnd::ReferencesMessage&)" ticket = 78 entry = {futureInterface = {<QFutureInterfaceBase> = {<No data fields>}, <No data fields>}, textDocument = 0x56280243c980} futureInterface = {<QFutureInterfaceBase> = {<No data fields>}, <No data fields>} #14 0x00007f0b9abcc47b in ClangBackEnd::ClangCodeModelClientInterface::dispatch (this=0x5627fd02c880, messageEnvelop=...) at /home/shaneh/dev/qt-creator/src/libs/clangbackendipc/clangcodemodelclientinterface.cpp:57 __PRETTY_FUNCTION__ = "virtual void ClangBackEnd::ClangCodeModelClientInterface::dispatch(const ClangBackEnd::MessageEnvelop&)" #15 0x00007f0b9abc9f6c in ClangBackEnd::ClangCodeModelServerProxy::readMessages (this=0x5627fd02c938) at /home/shaneh/dev/qt-creator/src/libs/clangbackendipc/clangcodemodelserverproxy.cpp:49 message = @0x5628033b36b8: {data = {d = 0x5628032cd110}, messageType_ = ClangBackEnd::MessageType::ReferencesMessage} __for_range = <unknown type in /home/shaneh/dev/build-qtcreator/lib/qtcreator/plugins/../libClangbackendipc.so.4, CU 0x24d8e, DIE 0x49ac3> __for_begin = 0x5628033b36b8 __for_end = 0x5628033b36c8 #16 0x00007f0b9abc9e13 in ClangBackEnd::ClangCodeModelServerProxy::<lambda()>::operator()(void) const (__closure=0x5627fd02db00) at /home/shaneh/dev/qt-creator/src/libs/clangbackendipc/clangcodemodelserverproxy.cpp:43 this = 0x5627fd02c938 #17 0x00007f0b9abca6db in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, ClangBackEnd::ClangCodeModelServerProxy::ClangCodeModelServerProxy(ClangBackEnd::ClangCodeModelClientInterface*, QIODevice*)::<lambda()> >::call(ClangBackEnd::ClangCodeModelServerProxy::<lambda()> &, void **) (f=..., arg=0x7fff6f0bdaa0) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:135 No locals. #18 0x00007f0b9abca6bc in QtPrivate::Functor<ClangBackEnd::ClangCodeModelServerProxy::ClangCodeModelServerProxy(ClangBackEnd::ClangCodeModelClientInterface*, QIODevice*)::<lambda()>, 0>::call<QtPrivate::List<>, void>(ClangBackEnd::ClangCodeModelServerProxy::<lambda()> &, void *, void **) (f=..., arg=0x7fff6f0bdaa0) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobjectdefs_impl.h:192 No locals. #19 0x00007f0b9abca681 in QtPrivate::QFunctorSlotObject<ClangBackEnd::ClangCodeModelServerProxy::ClangCodeModelServerProxy(ClangBackEnd::ClangCodeModelClientInterface*, QIODevice*)::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=0x5627fd02daf0, r=0x5627fd02c8f0, a=0x7fff6f0bdaa0, ret=0x0) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobject_impl.h:169 No locals.
For Gerrit Dashboard: QTCREATORBUG-18459 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
198565,2 | CppEditor: Cancel runner in ~CppUseSelectionsUpdater | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |